fixed the nav menu on mobile

--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -10,7 +10,7 @@
 .header__logo {
   // positioning the header logo
   position: absolute;
-  z-index: 5001;
+  z-index: -9999999999999;
 
   &--desktop {
     transform: translate(0, -50%);
